feature section have been converted into bootstrap

--- a/boostrap/index.html
+++ b/boostrap/index.html
@@ -87,32 +87,33 @@
 			</div>
 
 			<!-- Feature -->
-			<div id="features" class="features">
+			<div id="features" class="features text-center">
 				<div class="container">
 					<h1 class="advance-heading">Features</h1>
-					<div class="grid">
-						<div class="col">
+
+					<div class="row">
+						<div class="col-sm-3">
 							<div class="icon">
 								<i class="fa fa-comments"></i>
 							</div>
 							<h3>Lorem ipsum</h3>
 							<p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
 						</div>
-						<div class="col">
+						<div class="col-sm-3">
 							<div class="icon">
 								<i class="fa fa-bullhorn"></i>
 							</div>
 							<h3>Dolor sit amet</h3>
 							<p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque.</p>
 						</div>
-						<div class="col">
+						<div class="col-sm-3">
 							<div class="icon">
 								<i class="fa fa-users"></i>
 							</div>
 							<h3>Tempus eleifend</h3>
 							<p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
 						</div>
-						<div class="col">
+						<div class="col-sm-3">
 							<div class="icon">
 								<i class="fa fa-magic"></i>
 							</div>
