About section HTML and CSS code have been done

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Intract</title>
+		<title>Intract - Bootstrap</title>
 
 		<meta charset="utf-8">
 		<meta name="author" content="jb">
@@ -127,18 +127,18 @@
 			<!-- About -->
 			<div id="about" class="about">
 				<div class="container">
-					<div class="grid">
-						<div class="col">
+					<div class="row">
+						<div class="col-sm-6">
 							<img src="images/about.jpg">
 						</div>
-						<div class="col">
+						<div class="col-sm-6">
 							<div class="text-block">
 								<h1 class="advance-heading left">About</h1>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
 								<h2>Why Choose Us?</h2>
-								<div class="grid">
-									<div class="col">
+								<div class="row">
+									<div class="col-sm-6">
 										<ul class="list-style">
 											<li>Lorem ipsum dolor</li>
 											<li>Tempor incididunt</li>
@@ -146,7 +146,7 @@
 											<li>Incididunt ut labore</li>
 										</ul>
 									</div>
-									<div class="col">
+									<div class="col-sm-6">
 										<ul class="list-style">
 											<li>Aliquip ex ea commodo</li>
 											<li>Lorem ipsum dolor</li>
