Services section HTML and CSS code have been done

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -167,22 +167,22 @@
 					<h1 class="advance-heading light">Our Services</h1>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leonec.</p>
 
-					<div class="grid">
-						<div class="col">
+					<div class="row">
+						<div class="col-sm-4">
 							<div class="icon">
 								<i class="fab fa-wordpress"></i>
 							</div>
 							<h3>Lorem ipsum dolor</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.</p>
 						</div>
-						<div class="col">
+						<div class="col-sm-4">
 							<div class="icon">
 								<i class="fa fa-cart-arrow-down"></i>
 							</div>
 							<h3>Consectetur adipiscing</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.</p>
 						</div>
-						<div class="col">
+						<div class="col-sm-4">
 							<div class="icon">
 								<i class="fa fa-cloud-download-alt"></i>
 							</div>
@@ -190,21 +190,21 @@
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.</p>
 						</div>
 
-						<div class="col">
+						<div class="col-sm-4">
 							<div class="icon">
 								<i class="fa fa-language"></i>
 							</div>
 							<h3>Consectetur adipiscing</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.</p>
 						</div>
-						<div class="col">
+						<div class="col-sm-4">
 							<div class="icon">
 								<i class="fa fa-plane"></i>
 							</div>
 							<h3>Lorem ipsum dolor</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.</p>
 						</div>
-						<div class="col">
+						<div class="col-sm-4">
 							<div class="icon">
 								<i class="fa fa-chart-pie"></i>
 							</div>
