Gallary section HTML and CSS Code have been done

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -165,7 +165,7 @@
 			<div id="services" class="services">
 				<div class="container">
 					<h1 class="advance-heading light">Our Services</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leonec.</p>
+					<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leonec.</p>
 
 					<div class="row">
 						<div class="col-sm-4">
@@ -219,10 +219,10 @@
 			<div id="gallery" class="gallery">
 				<div class="container">
 					<h1 class="advance-heading">Gallery</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leonec.</p>
+					<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leonec.</p>
 
-					<div class="grid">
-						<div class="col">
+					<div class="row">
+						<div class="col-sm-4">
 							<div class="thumbnail">
 								<a href="#">
 									<img src="images/01-small.jpg">
@@ -232,7 +232,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-sm-4">
 							<div class="thumbnail">
 								<a href="#">
 									<img src="images/02-small.jpg">
@@ -242,7 +242,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-sm-4">
 							<div class="thumbnail">
 								<a href="#">
 									<img src="images/03-small.jpg">
@@ -252,7 +252,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-sm-4">
 							<div class="thumbnail">
 								<a href="#">
 									<img src="images/04-small.jpg">
@@ -262,7 +262,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-sm-4">
 							<div class="thumbnail">
 								<a href="#">
 									<img src="images/05-small.jpg">
@@ -272,7 +272,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-sm-4">
 							<div class="thumbnail">
 								<a href="#">
 									<img src="images/06-small.jpg">
@@ -282,7 +282,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-sm-4">
 							<div class="thumbnail">
 								<a href="#">
 									<img src="images/07-small.jpg">
@@ -292,7 +292,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-sm-4">
 							<div class="thumbnail">
 								<a href="#">
 									<img src="images/08-small.jpg">
@@ -302,7 +302,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-sm-4">
 							<div class="thumbnail">
 								<a href="#">
 									<img src="images/09-small.jpg">
