Testimonial section HTML and CSS code have been done

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -320,9 +320,9 @@
 			<div id="testimonials" class="testimonials">
 				<div class="container">
 					<h1 class="advance-heading">What our clients say</h1>
-
-					<div class="grid">
-						<div class="col">
+					<div class="separator"></div>
+					<div class="row">
+						<div class="col-sm-4">
 							<div class="media">
 								<div class="dp">
 									<img src="images/testimonials/01.jpg">
@@ -331,7 +331,7 @@
 								<span>- John Doe</span>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-sm-4">
 							<div class="media">
 								<div class="dp">
 									<img src="images/testimonials/02.jpg">
@@ -340,7 +340,7 @@
 								<span>- Johnathan Doe</span>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-sm-4">
 							<div class="media">
 								<div class="dp">
 									<img src="images/testimonials/03.jpg">
@@ -349,7 +349,7 @@
 								<span>- John Doe</span>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-sm-4">
 							<div class="media">
 								<div class="dp">
 									<img src="images/testimonials/04.jpg">
@@ -358,7 +358,7 @@
 								<span>- Johnathan Doe</span>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-sm-4">
 							<div class="media">
 								<div class="dp">
 									<img src="images/testimonials/05.jpg">
@@ -367,7 +367,7 @@
 								<span>- John Doe</span>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-sm-4">
 							<div class="media">
 								<div class="dp">
 									<img src="images/testimonials/06.jpg">
