Team section HTML and CSS code have been done

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -384,10 +384,10 @@
 			<div id="team" class="team">
 				<div class="container">
 					<h1 class="advance-heading">Meet The Team</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leonec.</p>
+					<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leonec.</p>
 
-					<div class="grid">
-						<div class="col">
+					<div class="row">
+						<div class="col-sm-3">
 							<div class="team-member">
 								<div class="dp">
 									<img src="images/01.jpg">
@@ -396,7 +396,7 @@
 								<span>Director</span>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-sm-3">
 							<div class="team-member">
 								<div class="dp">
 									<img src="images/02.jpg">
@@ -405,7 +405,7 @@
 								<span>Senior Designer</span>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-sm-3">
 							<div class="team-member">
 								<div class="dp">
 									<img src="images/03.jpg">
@@ -414,7 +414,7 @@
 								<span>Senior Designer</span>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-sm-3">
 							<div class="team-member">
 								<div class="dp">
 									<img src="images/04.jpg">
