Contact section HTML and CSS code have been done

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -320,7 +320,7 @@
 			<div id="testimonials" class="testimonials">
 				<div class="container">
 					<h1 class="advance-heading">What our clients say</h1>
-					<div class="separator"></div>
+					<div class="space"></div>
 					<div class="row">
 						<div class="col-sm-4">
 							<div class="media">
@@ -432,57 +432,60 @@
 				<div class="container">
 					<h1 class="advance-heading left light">Get In Touch</h1>
 
-					<div class="grid">
-						<div class="col-lg">
-							<p>Please fill out the form below to send us an email and we will get back to you as soon as possible.</p>
+					<div class="row">
+						<div class="col-sm-9">
+							<p class="lead">Please fill out the form below to send us an email and we will get back to you as soon as possible.</p>
 
 							<form>
-								<div class="grid">
-									<div class="col">
+								<div class="row">
+									<div class="col-sm-6">
 										<div class="form-group">
-											<input type="text" name="name" placeholder="Name">
+											<input class="form-control" type="text" name="name" placeholder="Name">
 										</div>
 									</div>
+									<div class="col-sm-6">
+										<div class="form-group">
+											<input class="form-control" type="text" name="email" placeholder="Email">
+										</div>
+									</div>
+								</div>
 
-									<div class="col">
-										<div class="form-group">
-											<input type="text" name="email" placeholder="Email">
-										</div>
-									</div>
-								</div>
-								
 								<div class="form-group">
-									<textarea placeholder="Message"></textarea>
+									<textarea class="form-control" placeholder="Message"></textarea>
 								</div>
+
 								<button class="btn btn-outline" type="button">Send Message</button>
 							</form>
 						</div>
-						<div class="col-sm">
+						<div class="col-sm-3">
 							<div class="widget contact-info">
 								<h3 class="title">Contact Info</h3>
-								<ul class="list-unstyle">
-									<li>
-										<strong class="has-icon">
-											<i class="fa fa-map-marker-alt"></i>
-											Address
-										</strong>
-										<span>4321 California St, <br> San Francisco, CA 12345</span>
-									</li>
-									<li>
-										<strong class="has-icon">
-											<i class="fa fa-phone-alt"></i>
-											Phone
-										</strong>
-										<span>+1 123 456 1234</span>
-									</li>
-									<li>
-										<strong class="has-icon">
-											<i class="fa fa-envelope"></i>
-											Email
-										</strong>
-										<span>info@company.com</span>
-									</li>
-								</ul>
+
+								<address>
+									<ul class="list-unstyled">
+										<li>
+											<strong class="has-icon">
+												<i class="fa fa-map-marker-alt"></i>
+												Address
+											</strong>
+											<span>4321 California St, <br> San Francisco, CA 12345</span>
+										</li>
+										<li>
+											<strong class="has-icon">
+												<i class="fa fa-phone-alt"></i>
+												Phone
+											</strong>
+											<span>+1 123 456 1234</span>
+										</li>
+										<li>
+											<strong class="has-icon">
+												<i class="fa fa-envelope"></i>
+												Email
+											</strong>
+											<span>info@company.com</span>
+										</li>
+									</ul>
+								</address>
 							</div>
 						</div>
 					</div>
@@ -490,7 +493,7 @@
 					<div class="seprator"></div>
 
 					<div class="social-media light">
-						<ul class="list-unstyle">
+						<ul class="list-inline">
 							<li>
 								<a class="facebook" href="#">
 									<i class="fab fa-facebook-f"></i>
